poc init, part of code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ members = [
 	"primitives/evm",
 	"primitives/rpc",
 	"primitives/self-contained",
+	"primitives/tenet-app",
+	"primitives/poc",
 	"template/node",
 	"template/runtime",
 ]
@@ -131,6 +133,8 @@ fp-evm = { version = "3.0.0-dev", path = "primitives/evm", default-features = fa
 fp-rpc = { version = "3.0.0-dev", path = "primitives/rpc", default-features = false }
 fp-self-contained = { version = "1.0.0-dev", path = "primitives/self-contained", default-features = false }
 fp-storage = { version = "2.0.0", path = "primitives/storage", default-features = false }
+fp-poc = { version = "1.0.0", path = "primitives/poc", default-features = false }
+tenet-app = { version = "1.0.0", path = "primitives/tenet-app", default-features = false }
 # Frontier FRAME
 pallet-base-fee = { version = "1.0.0", path = "frame/base-fee", default-features = false }
 pallet-dynamic-fee = { version = "4.0.0-dev", path = "frame/dynamic-fee", default-features = false }
