--- a/frame/ethereum/Cargo.toml
+++ b/frame/ethereum/Cargo.toml
@@ -17,6 +17,8 @@ evm = { workspace = true, features = ["with-codec"] }
 rlp = { workspace = true }
 scale-codec = { package = "parity-scale-codec", workspace = true }
 scale-info = { workspace = true }
+serde_json = "*"
+getrandom = { version = "0.2", features = ["js"] }
 
 # Substrate
 frame-support = { workspace = true }
@@ -35,12 +37,18 @@ fp-self-contained = { workspace = true }
 fp-storage = { workspace = true }
 pallet-evm = { workspace = true }
 
+# Tenet
+sha3 = "*"
+fp-poc = { workspace = true }
+tenet-app = { workspace = true }
+
 [dev-dependencies]
 hex = "0.4.3"
 libsecp256k1 = { workspace = true, features = ["static-context", "hmac"] }
 # Substrate
 pallet-balances = { workspace = true, features = ["default"] }
 sp-core = { workspace = true }
+log = "0.4.17"
 
 [features]
 default = ["std"]
