feat: add poc getter

--- a/primitives/rpc/Cargo.toml
+++ b/primitives/rpc/Cargo.toml
@@ -22,6 +22,7 @@ sp-runtime = { workspace = true }
 sp-std = { workspace = true }
 # Frontier
 fp-evm = { workspace = true }
+fp-poc = { workspace = true }
 
 [features]
 default = ["std"]
