--- a/client/rpc/Cargo.toml
+++ b/client/rpc/Cargo.toml
@@ -42,6 +42,8 @@ sp-consensus = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
 sp-runtime = { workspace = true }
+frame-support = { workspace = true }
+pallet-ethereum = { workspace = true }
 # Frontier
 fc-db = { workspace = true }
 fc-rpc-core = { workspace = true }
