--- a/client/cli/Cargo.toml
+++ b/client/cli/Cargo.toml
@@ -34,7 +34,7 @@ sc-block-builder = { workspace = true }
 sc-client-db = { workspace = true, features = ["rocksdb"] }
 sp-consensus = { workspace = true }
 sp-io = { workspace = true }
-substrate-test-runtime-client = { workspace = true }
+# substrate-test-runtime-client = { workspace = true }
 # Frontier
 fc-api = { workspace = true }
 fc-db = { workspace = true, features = ["rocksdb"] }
@@ -42,7 +42,4 @@ frontier-template-runtime = { workspace = true, features = ["default"] }
 
 [features]
 default = ["rocksdb"]
-rocksdb = [
-	"sc-cli/rocksdb",
-	"fc-db/rocksdb",
-]
+rocksdb = ["sc-cli/rocksdb", "fc-db/rocksdb"]
