--- a/client/mapping-sync/Cargo.toml
+++ b/client/mapping-sync/Cargo.toml
@@ -43,7 +43,7 @@ sc-client-db = { workspace = true, features = ["rocksdb"] }
 sp-consensus = { workspace = true }
 sp-core = { workspace = true, features = ["default"] }
 sp-io = { workspace = true }
-substrate-test-runtime-client = { workspace = true }
+# substrate-test-runtime-client = { workspace = true }
 # Frontier
 fp-consensus = { workspace = true, features = ["default"] }
 fp-storage = { workspace = true, features = ["default"] }
@@ -52,8 +52,4 @@ frontier-template-runtime = { workspace = true, features = ["default"] }
 [features]
 default = ["rocksdb"]
 rocksdb = ["fc-db/rocksdb"]
-sql = [
-	"tokio",
-	"sp-core",
-	"fc-db/sql",
-]
+sql = ["tokio", "sp-core", "fc-db/sql"]
