--- a/client/rpc/Cargo.toml
+++ b/client/rpc/Cargo.toml
@@ -68,16 +68,12 @@ tempfile = "3.8.0"
 sc-block-builder = { workspace = true }
 sc-client-db = { workspace = true, features = ["rocksdb"] }
 sp-consensus = { workspace = true }
-substrate-test-runtime-client = { workspace = true }
+# substrate-test-runtime-client = { workspace = true }
 # Frontier
 fc-db = { workspace = true }
 
 [features]
 default = ["rocksdb"]
-rocksdb = [
-	"sc-service/rocksdb",
-	"fc-db/rocksdb",
-	"fc-mapping-sync/rocksdb",
-]
+rocksdb = ["sc-service/rocksdb", "fc-db/rocksdb", "fc-mapping-sync/rocksdb"]
 txpool = ["fc-rpc-core/txpool"]
 rpc-binary-search-estimate = []
